--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
 }
+
+#root {
+    background-color: #f3f3f4;
+}
