--- a/src/pages/user/style.scss
+++ b/src/pages/user/style.scss
@@ -8,7 +8,7 @@
     justify-content: center;
 }
 
-.logo {
+.title {
     text-align: center;
     margin: 10px;
 }
@@ -45,7 +45,9 @@
 }
 
 .input_password,
-.input_username {
+.input_username,
+.input_email,
+.input_code {
     width: 100%;
     height: 50px;
     padding: 0px 10px;
@@ -58,6 +60,7 @@
 }
 
 .btn {
+    cursor: pointer;
     width: 100%;
     height: 50px;
     margin: 10px 0;
@@ -70,12 +73,12 @@
     border-radius: 8px;
 }
 
-.btn.login_with_kakao {
+.btn.with_kakao {
     background-color: #ffe400;
     color: black;
 }
 
-.btn.login_with_google {
+.btn.with_google {
     background-color: #ffffff;
     color: black;
     border: 1px solid #909090;
