feat: 회원가입 페이지

--- a/src/pages/user/VerifyPage.scss
+++ b/src/pages/user/VerifyPage.scss
@@ -3,6 +3,12 @@
     align-items: center;
 }
 
+.confirm_code {
+    .box_input {
+        margin: 0px;
+    }
+}
+
 .btn.confirm_code {
     margin: 0;
     margin-left: 5px;
