--- a/src/pages/user/style.scss
+++ b/src/pages/user/style.scss
@@ -36,18 +36,23 @@
     }
 }
 
+.input_item {
+    margin: 10px 0;
+}
+
 .box_input {
     width: 100%;
-    margin: 10px 0;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.input_password,
-.input_username,
 .input_email,
-.input_code {
+.input_code,
+.input_username,
+.input_password,
+.input_confirm_password,
+.input_nickname {
     width: 100%;
     height: 50px;
     padding: 0px 10px;
