--- a/src/common/organisms/NavBar.scss
+++ b/src/common/organisms/NavBar.scss
@@ -1,17 +1,16 @@
 // NavBar.scss
 
 .navbar {
-    height: 150px; // 네비게이션 바의 높이 설정. 필요에 따라 변경 가능.
+    height: 100px; // 네비게이션 바의 높이 설정. 필요에 따라 변경 가능.
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 0px 20px; // 좌우 여백 설정. 필요에 따라 변경 가능.
+    padding: 0 20px; // 좌우 여백 설정. 필요에 따라 변경 가능.
     background-color: #f3f3f4; // 네비게이션 바 배경색 설정. 필요에 따라 변경 가능.
     font-family: 'Inter', sans-serif;
     &__logo {
-        padding-top: 5px;
-        height: 110px; // 로고 이미지의 높이 설정. 필요에 따라 변경 가능.
-        width: 180px;
+        height: 80px;
+        margin-left: 10px;
     }
     &__tabbar {
         display: none;
@@ -48,16 +47,19 @@
         box-shadow: none;
     }
     @media (max-width: 768px) {
+        height: 80px;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         &__tabbar {
             margin-left: 10px;
+            margin-right: 30px;
             display: flex;
-            width: 50px;
-            height: 50px;
+            width: 30px;
+            height: 30px;
         }
         &__logo {
             margin: 0 auto;
+            height: 70px;
         }
         &__menu {
             display: none;
