--- a/src/common/organisms/NavMobile.scss
+++ b/src/common/organisms/NavMobile.scss
@@ -1,4 +1,4 @@
-.navbar {
+.navbar_m {
     display: none;
     @media (max-width: 768px) {
         display: flex;
@@ -9,7 +9,7 @@
         width: 100%;
         height: 100px; // 네비게이션 바의 높이 설정
         background-color: #F3F3F4; // 배경색 설정
-        &__item {
+        &__item{
             flex-direction: column;
             margin: auto;
             &__logo{
