--- a/src/pages/user/style.scss
+++ b/src/pages/user/style.scss
@@ -70,23 +70,23 @@
     align-items: center;
     justify-content: center;
     border-radius: 8px;
-}
+    
+    &.with_input {
+        margin: 0;
+        margin-left: 5px;
+        width: 120px;
+    }
 
-.btn.with_input {
-    margin: 0;
-    margin-left: 5px;
-    width: 120px;
-}
-
-.btn.kakao {
-    background-color: #ffe400;
-    color: black;
-}
-
-.btn.google {
-    background-color: #ffffff;
-    color: black;
-    border: 1px solid #909090;
+    &.btn.kakao {
+        background-color: #ffe400;
+        color: black;
+    }
+    
+    &.btn.google {
+        background-color: #ffffff;
+        color: black;
+        border: 1px solid #909090;
+    }
 }
 
 .list_user {
@@ -95,11 +95,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
-.list_user a {
-    text-decoration: none;
-    color: black;
+    a {
+        text-decoration: none;
+        color: black;
+    }
 }
 
 .list_item {
