design: 캔버스 위아래에 컴포넌트 넣을수 있게 css수정

--- a/src/pages/canvas/index.scss
+++ b/src/pages/canvas/index.scss
@@ -8,15 +8,16 @@ a {
 }
 
 .tldraw {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
-
+.canvas {
+    flex-grow: 2;
+    position: relative;
+    background-color: #545f71;
+}
 .p-md {
     padding: 12px;
 }
@@ -33,10 +34,8 @@ a {
     color: dodgerblue;
 }
 
-.absolute {
-    position: absolute;
+.info {
     z-index: 100;
-    left: 0;
-    right: 0;
-    top: 40px;
+    width: 100%;
+    height: 40px;
 }
