--- a/src/common/atoms/Container.scss
+++ b/src/common/atoms/Container.scss
@@ -49,4 +49,20 @@
     &.center {
         text-align: center;
     }
+    .head {
+        display: flex;
+        align-items: center;
+        > h2 {
+            flex-grow: 2;
+        }
+    }
+    &.fit {
+        h2 {
+            margin: 0;
+            padding: 10px 0;
+        }
+        p {
+            margin: 0;
+        }
+    }
 }
