design: 로그인 버튼 css수정

--- a/src/common/atoms/Button.scss
+++ b/src/common/atoms/Button.scss
@@ -19,11 +19,11 @@
     &.kakao {
         background-color: #ffe400;
         color: black;
+        font-size: 14px;
     }
 
     &.google {
         background-color: #ffffff;
         color: black;
-        border: 1px solid #909090;
     }
 }
