--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -32,7 +32,7 @@
 .input {
     width: 100%;
     height: 50px;
-    padding: 0px 10px;
+    padding: 0 10px;
     border: none;
     background-color: #d9d9d9;
     display: flex;
