--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -11,6 +11,11 @@
     border-radius: 20px;
 }
 
+.login {
+    width: 300px;
+    margin-top: 20px;
+}
+
 @media (min-width: 768px) {
     .form {
         width: 580px;
