--- a/src/common/organisms/NavBar.scss
+++ b/src/common/organisms/NavBar.scss
@@ -1,15 +1,16 @@
 // NavBar.scss
 
 .navbar {
-    height: 100px; // 네비게이션 바의 높이 설정. 필요에 따라 변경 가능.
+    height: 80px; // 네비게이션 바의 높이 설정. 필요에 따라 변경 가능.
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 0 20px; // 좌우 여백 설정. 필요에 따라 변경 가능.
+    padding: 0 40px; // 좌우 여백 설정. 필요에 따라 변경 가능.
     background-color: #f3f3f4; // 네비게이션 바 배경색 설정. 필요에 따라 변경 가능.
     font-family: 'Inter', sans-serif;
+
     &__logo {
-        height: 80px;
+        height: 60px;
         margin-left: 10px;
     }
     &__tabbar {
@@ -17,26 +18,58 @@
     }
     &__menu {
         display: flex;
+        font-weight: bold;
 
         margin-left: 100px;
         a {
+            display: inline-block;
+            height: 50px;
             text-decoration: none;
+            line-height: 50px;
+
             color: #000000;
+            &:hover {
+                color: #575757;
+            }
             &:not(:last-child) {
                 margin-right: 50px; // 메뉴 항목 간의 간격 설정. 필요에 따라 변경 가능.
             }
         }
     }
+    &__action {
+        margin-left: auto;
+        margin-right: 20px;
+        display: flex;
+        align-items: center;
+    }
+
+    &__login-Assist-text {
+        margin-left: auto;
+        font-size: 15px;
+        font-weight: bold;
+    }
 
     &__login-button {
-        width: 80px;
+        width: 100px;
         height: 40px;
         border-radius: 5px;
         background-color: #545f71;
         font-weight: bold; // 로그인 버튼 글꼴 굵기 설정. 필요에 따라 변경 가능.
-        margin-left: auto;
         box-shadow: none;
     }
+
+    &__avatar {
+        border-radius: 50%;
+        margin-left: 10px;
+    }
+
+    &__username {
+        margin-left: 10px;
+        margin-right: 30px;
+        font-size: 15px;
+        font-weight: bold;
+    }
+
     &__signup-button {
         width: 80px;
         height: 40px;
