--- a/src/common/atoms/Container.scss
+++ b/src/common/atoms/Container.scss
@@ -15,7 +15,7 @@
     justify-content: center;
 
     &.column {
-        height: 70vh;
+        min-height: 80vh;
         display: flex;
         flex-direction: column;
         align-items: center;
