design: 앨범 그룹 액션버튼 디자인변경
- 앨범 그룹화면에서 카드 제목길이에 따라 액션버튼의 줄바꿈현상과 위치변경의 문제 해결 위해 디자인변경

--- a/src/common/atoms/Container.scss
+++ b/src/common/atoms/Container.scss
@@ -58,7 +58,7 @@
     }
     .head {
         display: flex;
-        align-items: center;
+        align-items: start;
         > h2 {
             flex-grow: 2;
         }
