--- a/src/pages/Album/Group/components/AlbumCard.scss
+++ b/src/pages/Album/Group/components/AlbumCard.scss
@@ -3,6 +3,8 @@
     background-color: white;
     padding: 4px;
     border-radius: 4px;
+    width: 124px;
+    margin: 10px 0;
 
     button {
         border: none;
