feat: 로그아웃기능추가

--- a/src/common/atoms/Button.scss
+++ b/src/common/atoms/Button.scss
@@ -26,4 +26,10 @@
         background-color: #ffffff;
         color: black;
     }
+    &.logout {
+        width: auto;
+        height: auto;
+        background-color: transparent;
+        padding: 10px;
+    }
 }
