--- a/src/pages/Canvas/index.scss
+++ b/src/pages/Canvas/index.scss
@@ -8,13 +8,19 @@ a {
 }
 
 .tldraw {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     width: 100%;
-    height: 100%;
+}
+
+.canvas {
+    position: relative;
+    max-width: 1500px;
+    max-height: 2000px;
+    flex-grow: 2;
+    background-color: #545f71;
 }
 
 .p-md {
