feat: icon button 디자인추가

--- a/src/common/atoms/Button.scss
+++ b/src/common/atoms/Button.scss
@@ -26,7 +26,7 @@
         background-color: #ffffff;
         color: black;
     }
-    &.logout {
+    &.icon {
         width: auto;
         height: auto;
         background-color: transparent;
