--- a/src/pages/Canvas/index.scss
+++ b/src/pages/Canvas/index.scss
@@ -27,6 +27,9 @@ a {
         border: 1px solid #333;
         z-index: 100;
         margin: 10px auto 1em;
+        .qrModal {
+            width: 400px;
+        }
     }
     .info {
         margin: 10px 20px;
