--- a/src/pages/Canvas/index.scss
+++ b/src/pages/Canvas/index.scss
@@ -40,3 +40,13 @@ a {
     right: 0;
     top: 40px;
 }
+
+.save_canvas {
+    position: absolute;
+    z-index: 100;
+    left: 10px;
+    top: 80px;
+    width: 100px;
+    height: 40px;
+    background-color: #F94D4D;
+}
