--- a/src/pages/Trash/index.scss
+++ b/src/pages/Trash/index.scss
@@ -2,7 +2,8 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr); // 4개의 열을 동일한 크기로 설정
     gap: 20px; // 간격 설정
-    margin: 0 auto; // 중앙에 위치시키기
+    margin-left: 20%; // 중앙에 위치시키기
+    margin-right: 20%;
     max-width: 1200px; // 최대 너비 설정 (필요에 따라 조정)
 }
 
@@ -49,8 +50,8 @@
 .buttons-container {
     display: flex;
     margin-top: 50px;
-    margin-left: 300px;
-    margin-right: 300px;
+    margin-left: 20%;
+    margin-right: 20%;
     justify-content: space-between;
     padding: 0 20px; // `trash-list`와 동일한 패딩으로 여백 설정
 
@@ -60,5 +61,33 @@
 
     .right-buttons {
         // 오른쪽 버튼 그룹 스타일링
+    }
+}
+
+* {
+    input[type='checkbox'] {
+        // 체크박스 크기 조정
+        transform: scale(1.5); // 크기를 1.5배로 증가
+        margin-right: 10px; // 체크박스와 텍스트 사이 간격
+        cursor: pointer; // 마우스 오버 시 커서 변경
+
+        &:focus {
+            outline: none; // 포커스 시 아웃라인 제거
+        }
+    }
+}
+
+.right-buttons {
+    width: 80px;
+    height: 40px;
+    background-color: #f94d4d;
+    color: white; // 글자 색을 하얗게 설정
+    font-size: 16px; // 글자 크기를 크게 설정
+    border: none; // 테두리 제거
+    border-radius: 5px; // 경계 둥글게 설정
+    cursor: pointer; // 마우스 오버 시 커서 변경
+
+    &:hover {
+        background-color: darken(#f94d4d, 10%); // 호버 시 색상 어둡게
     }
 }
