--- a/src/pages/Album/View/components/AlbumContent.scss
+++ b/src/pages/Album/View/components/AlbumContent.scss
@@ -21,7 +21,7 @@ $transition_time: 0.3s;
     align-items: center;
     margin: 4px;
 
-    .page_info {
+    .album_menu {
         display: flex;
         transition: all $transition_time linear;
 
@@ -35,19 +35,28 @@ $transition_time: 0.3s;
             width: 1230px;
         }
 
-        .btn_prev,
-        .btn_next {
-            margin: 0 10px;
-            cursor: pointer;
-        }
-        .page_date {
+        .page_info {
             display: flex;
             align-items: center;
-            background-color: white;
-            box-shadow: 2px 2px;
-            border-radius: 5px;
-            padding: 0 15px;
-            cursor: default;
+            width: 100%;
+
+            .btn_prev,
+            .btn_next {
+                margin: 0 10px;
+                cursor: pointer;
+            }
+            .page_date {
+                display: flex;
+                align-items: center;
+                background-color: white;
+                box-shadow: 2px 2px;
+                border-radius: 5px;
+                padding: 0 15px;
+                cursor: default;
+            }
+        }
+        .add_page {
+            width: 100px;
         }
     }
 
